fix nav & cover z-index

--- a/home.css
+++ b/home.css
@@ -43,9 +43,10 @@ img {
   padding: 10.1rem 3.3rem 2.2rem;
   position: relative;
   overflow: hidden;
+  /* z-index: 2; */
 }
 
-.home .cover-top {
+.cover-top {
   position: absolute;
   z-index: 20;
   top: 0;
@@ -55,7 +56,7 @@ img {
   /* display: none; */
 }
 
-.home .cover-right {
+.cover-right {
   position: absolute;
   z-index: 10;
   right: -32%;
@@ -65,7 +66,7 @@ img {
   /* display: none; */
 }
 
-.home .cover-left {
+.cover-left {
   position: absolute;
   z-index: 30;
   top: 36%;
@@ -75,7 +76,7 @@ img {
   /* display: none; */
 }
 
-.home .cover-mouse {
+.cover-mouse {
   width: 3rem;
   height: 4.4rem;
   border: 2px solid black;
@@ -88,7 +89,14 @@ img {
   /* opacity: 1; */
 }
 
-/* nav section */
+.cover {
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
+  /* background-color: red; */
+  z-index: 200;
+}
 
 .nav {
   background-color: var(--borwn-color);
@@ -101,6 +109,7 @@ img {
   height: 62px;
   left: 0;
   top: 0;
+  z-index: 100;
 }
 
 .nav .logo {
@@ -272,7 +281,7 @@ img {
 }
 
 .content .mouse .line,
-.home .cover-mouse .line {
+.cover-mouse .line {
   height: 14px;
   border: 1px solid #000000;
   position: absolute;
@@ -282,7 +291,7 @@ img {
 }
 
 .content .mouse .text,
-.home .cover-mouse .text {
+.cover-mouse .text {
   position: absolute;
   bottom: -80%;
   left: 50%;
